# devin-ai-assistant

./: .gitignore  LICENSE  README.md
backend/: devin-backend.spec  pyproject.toml
backend/app/: engine.py  learner.py  llm_client.py  main.py  memory.py  models.py  routes.py  tools_real.py
frontend/: capacitor.config.ts  electron-builder.yml  index.html  package-lock.json  package.json
frontend/electron/: main.js  preload.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MemoryPanel.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  InfoPanel.tsx  RewardButtons.tsx  Sidebar.tsx  ToolBadge.tsx  ToolsPanel.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
